--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                      <img src="https://img5.pic.in.th/file/secure-sv1/PSUWIT.png" class="school-logo" alt="School Logo">
                 </div>
                 <div class="col-md-8 text-center">
-                    <h3 class="fw-bold mb-1">ระบบประกาศผลสอบ โรงเรียน มอ.วิทยานุสรณ์</h3>
+                    <h3 class="fw-bold mb-1">ระบบประกาศผลสอบ <br> โรงเรียน มอ.วิทยานุสรณ์</h3>
                     <p class="mb-0 text-white-50">กลุ่มทดสอบความรู้ นักเรียนชั้น ป.5 และ ม.2</p>
                 </div>
                 <div class="col-md-2 text-center text-md-end mt-3 mt-md-0">
