--- a/index.html
+++ b/index.html
@@ -201,10 +201,12 @@
                                 <div class="col-md-7">
                                     <small class="text-muted d-block">ชื่อ-นามสกุล</small>
                                     <span class="h5 fw-bold text-dark" id="resName"></span>
-                                </div>
-                                <div class="col-md-5 text-md-end mt-2 mt-md-0">
                                     <small class="text-muted d-block">รหัสประจำตัวสอบ</small>
                                     <span class="h5 text-primary" id="resCode"></span>
+                                </div>
+                                <div class="col-md-5 text-md-end mt-2 mt-md-0">
+                               <!--      <small class="text-muted d-block">รหัสประจำตัวสอบ</small>
+                                    <span class="h5 text-primary" id="resCode"></span> -->
                                     <small class="text-muted d-block">ลำดับที่สอบได้</small>
                                     <span class="h5 text-primary" id="Code"></span>
                                 </div>
